--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
+    "express": "^4.14.1",
     "react": "^15.4.2",
+    "react-image-gallery": "^0.7.13",
     "react-native": "0.41.1",
     "react-native-drawer": "^2.3.0",
     "react-native-vector-icons": "github:cloudle/react-native-vector-icons",
@@ -21,6 +23,7 @@
     "react-universal-ui": "0.0.74"
   },
   "devDependencies": {
+    "babel-core": "^6.23.1",
     "babel-jest": "18.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-module-resolver": "^2.5.0",
@@ -30,6 +33,9 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react-native": "1.9.1",
+    "chokidar": "^1.6.1",
+    "style-loader": "^0.13.2",
+    "css-loader": "^0.26.2",
     "file-loader": "^0.10.0",
     "jest": "18.1.0",
     "json-loader": "^0.5.4",
