--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
+    "server": "node server",
     "web-vendor": "webpack --config webpack.vendor.config.js",
     "web": "node webpack.devserver",
     "ios": "react-native run-ios",
@@ -13,6 +14,8 @@
   "dependencies": {
     "babel-polyfill": "^6.22.0",
     "express": "^4.14.1",
+    "express-graphql": "^0.6.3",
+    "graphql": "^0.9.1",
     "react": "^15.4.2",
     "react-image-gallery": "^0.7.13",
     "react-native": "0.41.1",
@@ -20,7 +23,8 @@
     "react-native-vector-icons": "github:cloudle/react-native-vector-icons",
     "react-native-web": "0.0.70",
     "react-router": "^4.0.0-beta.6",
-    "react-universal-ui": "0.0.74"
+    "react-universal-ui": "0.0.74",
+    "redis": "^2.6.5"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
