--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "apollo-client": "^1.0.0-rc.6",
     "babel-polyfill": "^6.22.0",
+    "body-parser": "^1.17.1",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
     "graphql": "^0.9.1",
+    "graphql-server-express": "^0.6.0",
+    "graphql-subscriptions": "^0.3.1",
+    "graphql-tag": "^1.3.2",
+    "neo4j-driver": "^1.2.0-rc1",
     "react": "^15.4.2",
     "react-image-gallery": "^0.7.13",
     "react-native": "0.41.1",
@@ -24,7 +30,8 @@
     "react-native-web": "0.0.70",
     "react-router": "^4.0.0-beta.6",
     "react-universal-ui": "0.0.74",
-    "redis": "^2.6.5"
+    "redis": "^2.6.5",
+    "subscriptions-transport-ws": "^0.5.5-alpha.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
